hphp/hack/test/typecheck/array/array_append_bad.php
<?hh

function my_example(): vec<mixed> {
  $x = vec[];
  $x[] += 1;
  return $x;
}
